--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "readdirsync2": "https://github.com/dragin96/readdirSync2.git",
     "vk-io": "^4.0.0-rc.2",
     "winston": "^3.1.0",
-    "winston-daily-rotate-file": "^3.3.2",
-    "wolfram-alpha-api": "https://products.wolframalpha.com/api/libraries/javascript/wolfram-alpha-api-1.0.0-rc.1.tgz"
+    "winston-daily-rotate-file": "^3.3.2"
   },
   "devDependencies": {},
   "scripts": {
