--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,24 +1,26 @@
 {
     "env": {
         "browser": true,
-        "es6": true,
-        "node": true
+        "commonjs": true,
+        "es6": true
     },
     "extends": "eslint:recommended",
-    "parserOptions": {
-        "sourceType": "module",
-        "ecmaVersion": 8
-    },
     "rules": {
+        "indent": [
+            "error",
+            "tab"
+        ],
         "linebreak-style": [
             "error",
-            "windows"
+            "unix"
+        ],
+        "quotes": [
+            "error",
+            "single"
         ],
         "semi": [
             "error",
             "always"
-        ],
-        "no-console": "off",
-        "no-case-declarations": "off"
+        ]
     }
 }
