--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,18 +2,16 @@
     "env": {
         "browser": true,
         "commonjs": true,
+        "node": true,
         "es6": true
     },
     "extends": "eslint:recommended",
+    "parserOptions": {
+        "ecmaVersion": 8
+    },
     "rules": {
-        "indent": [
-            "error",
-            "tab"
-        ],
-        "linebreak-style": [
-            "error",
-            "unix"
-        ],
+        "indent": 0,
+        "linebreak-style": 0,
         "quotes": [
             "error",
             "single"
@@ -21,6 +19,7 @@
         "semi": [
             "error",
             "always"
-        ]
+        ],
+        "no-console": 0
     }
 }
