--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "node-vk-bot-api": "^2.1.1",
     "readdirsync2": "https://github.com/dragin96/readdirSync2.git",
     "request": "^2.88.0",
+    "util": "^0.11.0",
     "vk-io": "^4.0.0-rc.2",
     "winston": "^3.1.0",
     "winston-daily-rotate-file": "^3.3.2"
